--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: go.mod
+          go-version: 'stable'
 
       - name: Install Kubebuilder
         run: |
@@ -61,3 +61,11 @@ jobs:
             --head "${{ steps.create_branch.outputs.branch }}" \
             --repo "${{ github.repository }}" \
             || echo "PR already exists or failed to create."
+
+      - name: Add label to PR
+        if: success()
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          PR_URL=$(gh pr view --json url -q .url)
+          gh pr edit "$PR_URL" --add-label "kubebuilder-update"
