--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,12 +2,13 @@ name: Kubebuilder Update
 
 on:
   schedule:
-    - cron: '0 6 * * 1'  # Weekly automation
-  workflow_dispatch:       # Manual runs
+    - cron: '0 6 * * 1'  # Every Monday at 6am UTC
+  workflow_dispatch:
 
 permissions:
   contents: write
   pull-requests: write
+  id-token: write
 
 jobs:
   update:
@@ -32,67 +33,68 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "kubebuilder-bot[app]"
+          git config --global user.email "kubebuilder-bot@apps.github.com"
 
       - name: Run kubebuilder alpha update
         run: |
           kubebuilder alpha update --force --from-version v4.5.2 || echo "Continuing despite errors due to --force"
 
-      - name: Ensure merge branch was generated
-        id: check_branch
+      - name: Get generated branch name
+        id: branch
         run: |
-          MERGE_BRANCH=$(git branch --show-current)
-          echo "Current branch: $MERGE_BRANCH"
-          echo "branch=$MERGE_BRANCH" >> $GITHUB_OUTPUT
- 
-          if [[ ! "$MERGE_BRANCH" =~ merge ]]; then
-            echo "Error: Current branch is not the merge branch."
-            exit 1
-          fi
+          BRANCH=$(git branch --show-current)
+          echo "Detected branch: $BRANCH"
+          echo "branch=$BRANCH" >> "$GITHUB_OUTPUT"
 
-      - name: Push branch
+      - name: Push updated branch
         run: |
-          git push origin "${{ steps.check_branch.outputs.branch }}" --force
+          git push origin "${{ steps.branch.outputs.branch }}" --force
 
-      - name: Install jq
-        run: sudo apt-get update && sudo apt-get install -y jq
+      - name: Generate GitHub App token
+        id: app_token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+          installation-id: ${{ secrets.APP_INSTALLATION_ID }}
 
-      - name: Create pull request via REST API
-        id: create_pr
+      - name: Create pull request using GitHub App token
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ steps.app_token.outputs.token }}
+          REPO: ${{ github.repository }}
+          BRANCH: ${{ steps.branch.outputs.branch }}
         run: |
-          PR_DATA=$(jq -n \
+          echo "Creating pull request from branch $BRANCH"
+
+          PR_PAYLOAD=$(jq -n \
             --arg title "chore: update Kubebuilder scaffolding" \
-            --arg body "This PR was created automatically using \`kubebuilder alpha update --force\`. Please review the changes and merge." \
-            --arg head "${{ steps.check_branch.outputs.branch }}" \
+            --arg body "This PR was created automatically using \`kubebuilder alpha update --force\`." \
+            --arg head "$BRANCH" \
             --arg base "main" \
-            '{title: $title, head: $head, base: $base, body: $body}')
-          
-          RESPONSE=$(curl -s -w "%{http_code}" -o response.json -X POST \
-            -H "Authorization: Bearer $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github+json" \
-            https://api.github.com/repos/${{ github.repository }}/pulls \
-            -d "$PR_DATA")
-          
-          if [[ "$RESPONSE" != "201" ]]; then
-            echo "Failed to create PR:"
-            cat response.json
-            exit 1
-          fi
-          
-          PR_NUMBER=$(jq '.number' response.json)
-          echo "pr_number=$PR_NUMBER" >> $GITHUB_OUTPUT
+            '{title: $title, body: $body, head: $head, base: $base}')
 
-      - name: Add label to PR via REST API
-        if: success()
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
           curl -s -X POST \
-            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Authorization: Bearer $GH_TOKEN" \
             -H "Accept: application/vnd.github+json" \
-            https://api.github.com/repos/${{ github.repository }}/issues/${{ steps.create_pr.outputs.pr_number }}/labels \
-            -d '{"labels": ["kubebuilder-update"]}'
+            https://api.github.com/repos/$REPO/pulls \
+            -d "$PR_PAYLOAD"
 
+      - name: Add label to pull request
+        env:
+          GH_TOKEN: ${{ steps.app_token.outputs.token }}
+          REPO: ${{ github.repository }}
+          BRANCH: ${{ steps.branch.outputs.branch }}
+        run: |
+          echo "Getting PR number for branch: $BRANCH"
+          PR_NUMBER=$(curl -s -H "Authorization: Bearer $GH_TOKEN" \
+            https://api.github.com/repos/$REPO/pulls?head=$REPO:$BRANCH \
+            | jq '.[0].number')
+
+          echo "Found PR number: $PR_NUMBER"
+
+          curl -s -X POST \
+            -H "Authorization: Bearer $GH_TOKEN" \
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/repos/$REPO/issues/$PR_NUMBER/labels \
+            -d '{"labels": ["kubebuilder-update"]}'
