--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,14 +1,14 @@
 name: Alpha Update
 
-permissions:
-  contents: write
-  pull-requests: write
-  actions: write
-
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * 2" # Runs every Monday at 00:00 UTC
+    - cron: "0 6 * * 1" # Mondays 06:00 UTC
+
+permissions:
+  contents: write        # push branch
+  pull-requests: write   # open PR
+  issues: write          # create/update issue
 
 jobs:
   alpha-update:
@@ -18,46 +18,112 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 'stable'
+          go-version: stable
 
       - name: Install Kubebuilder
         run: |
-          curl -L -o kubebuilder "https://go.kubebuilder.io/dl/latest/$(go env GOOS)/$(go env GOARCH)"
+          curl -fsSL -o kubebuilder "https://go.kubebuilder.io/dl/latest/$(go env GOOS)/$(go env GOARCH)"
           chmod +x kubebuilder
           sudo mv kubebuilder /usr/local/bin/
 
-      - name: Configure Git
+      - name: Get Kubebuilder version
+        id: kb
         run: |
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          RAW="$(kubebuilder version || true)"
+          VERSION="$(echo "$RAW" | sed -E 's/.*([vV][0-9]+\.[0-9]+\.[0-9]+).*/\1/I')"
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Run kubebuilder alpha update
         run: |
-          kubebuilder alpha update --from-version v4.5.2 --force
+          kubebuilder alpha update --force || true
 
-      - name: Restore workflows directory
+      - name: Detect merge branch & conflict status
+        id: detect
+        shell: bash
         run: |
-          git restore --source=main --staged --worktree .github/workflows
-          git add .github/workflows
-          git commit --amend --no-edit 
+          set -euo pipefail
+          BRANCH="$(git branch --show-current || true)"
+          echo "branch=$BRANCH" >> "$GITHUB_OUTPUT"
 
-      - name: Soft reset last 4 commits and checkout main
+          if [[ "$BRANCH" != tmp-merge-* && "$BRANCH" != *merge* ]]; then
+            echo "is_merge=no" >> "$GITHUB_OUTPUT"
+            echo "has_conflicts=unknown" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+          echo "is_merge=yes" >> "$GITHUB_OUTPUT"
+
+          if git ls-files -u | grep -q . ; then
+            echo "has_conflicts=yes" >> "$GITHUB_OUTPUT"
+          else
+            echo "has_conflicts=no" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Push merge branch
+        if: steps.detect.outputs.is_merge == 'yes'
         run: |
-          git reset --soft HEAD~4
-          git checkout main
+          git push -u origin "${{ steps.detect.outputs.branch }}" --force-with-lease
 
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "chore: update Kubebuilder scaffolding"
-          title: "chore: update Kubebuilder scaffolding"
-          body: "Automated update of Kubebuilder project scaffolding to latest version."
-          branch: kubebuilder-alpha-update
-          delete-branch: true
+      - name: Build PR body (file)
+        if: steps.detect.outputs.is_merge == 'yes'
+        run: |
+          printf '%s\n' \
+            "Automated update using **kubebuilder ${{ steps.kb.outputs.version }}**." \
+            "" \
+            "- Merge branch: \`${{ steps.detect.outputs.branch }}\`" \
+            "- Conflicts: **${{ steps.detect.outputs.has_conflicts }}**" \
+            "" \
+            "Please review and merge." \
+            > pr_body.md
+
+      - name: Create pull request and capture URL
+        if: steps.detect.outputs.is_merge == 'yes'
+        id: pr
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          PR_URL=$(gh pr create \
+            --title "chore: update Kubebuilder scaffolding to ${{ steps.kb.outputs.version }}" \
+            --body-file pr_body.md \
+            --base main \
+            --head "${{ steps.detect.outputs.branch }}" \
+            --json url -q .url)
+          echo "url=$PR_URL" >> "$GITHUB_OUTPUT"
+
+      - name: Build issue body (file)
+        if: steps.detect.outputs.is_merge == 'yes' && steps.pr.outputs.url
+        run: |
+          printf '%s\n' \
+            "An automated \`kubebuilder alpha update\` was run." \
+            "" \
+            "**Kubebuilder version used:** ${{ steps.kb.outputs.version }}" \
+            "**Merge branch:** \`${{ steps.detect.outputs.branch }}\`" \
+            "**Conflicts:** **${{ steps.detect.outputs.has_conflicts }}**" \
+            "**Pull Request:** ${{ steps.pr.outputs.url }}" \
+            "" \
+            "**Docs:**" \
+            "- Update command: https://kubebuilder.io/reference/commands/alpha_update" \
+            "- Releases: https://github.com/kubernetes-sigs/kubebuilder/releases" \
+            > issue_body.md
+
+      - name: Create/update tracking issue (with PR link)
+        if: steps.detect.outputs.is_merge == 'yes' && steps.pr.outputs.url
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          TITLE="Update your project to latest versions of Kubebuilder Scaffold"
+          ISSUE=$(gh issue list --state open -S "in:title $TITLE" --json number --jq '.[0].number' || true)
+          if [ -n "$ISSUE" ]; then
+            gh issue comment "$ISSUE" --body-file issue_body.md
+            gh issue edit "$ISSUE" --add-label "kubebuilder" || true
+          else
+            gh issue create --title "$TITLE" --body-file issue_body.md --label "kubebuilder"
+          fi
+
+      - name: No merge branch found (nothing to do)
+        if: steps.detect.outputs.is_merge != 'yes'
+        run: echo "No merge branch produced; no PR/issue created."
