--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -73,3 +73,4 @@ jobs:
             --push \
             --restore-path .github/workflows \
             --open-gh-issue
+            --from-version v4.5.2
