--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -32,45 +32,4 @@ jobs:
       # Step 2: Configure Git to create commits with the GitHub Actions bot.
       - name: Configure Git
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-      # Step 3: Set up Go environment.
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: stable
-
-      # Step 4: Install Kubebuilder from the master branch (tries `go install`, falls back to local build).
-      - name: Install Kubebuilder (master)
-        run: |
-          set -euxo pipefail
-
-          # Ensure GOPATH/bin is available to later steps
-          echo "$(go env GOPATH)/bin" >> "$GITHUB_PATH"
-          # Also export PATH for this step
-          export PATH="$(go env GOPATH)/bin:$PATH"
-
-          # Try installing from master via go install (v4 module path). If that fails, build from source.
-          if ! go install sigs.k8s.io/kubebuilder/v4/cmd/kubebuilder@master; then
-            git clone --depth 1 --branch master https://github.com/kubernetes-sigs/kubebuilder /tmp/kubebuilder
-            make -C /tmp/kubebuilder install
-          fi
-
-          kubebuilder version
-
-      # Step 5: Run the Kubebuilder alpha update command.
-      # More info: https://kubebuilder.io/reference/commands/alpha_update
-      - name: Run kubebuilder alpha update
-        run: |
-          # Executes the update command with specified flags.
-          # --force: Completes the merge even if conflicts occur, leaving conflict markers.
-          # --push: Automatically pushes the resulting output branch to the 'origin' remote.
-          # --restore-path: Preserves specified paths (e.g., CI workflow files) when squashing.
-          # --open-gh-issue: Creates a GitHub Issue with a link for opening a PR for review.
-          kubebuilder alpha update \
-            --force \
-            --push \
-            --restore-path .github/workflows \
-            --open-gh-issue \
-            --from-version v4.5.2
+          git config --global user.name
