--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -32,4 +32,104 @@ jobs:
       # Step 2: Configure Git to create commits with the GitHub Actions bot.
       - name: Configure Git
         run: |
-          git config --global user.name
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+      # Step 3: Set up Go environment.
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: stable
+
+      # Step 4: Install Kubebuilder from the master branch (tries `go install`, falls back to local build).
+      - name: Install Kubebuilder (master)
+        run: |
+          set -euxo pipefail
+
+          # Ensure GOPATH/bin is available to later steps
+          echo "$(go env GOPATH)/bin" >> "$GITHUB_PATH"
+          # Also export PATH for this step
+          export PATH="$(go env GOPATH)/bin:$PATH"
+
+          # Try installing from master via go install (v4 module path). If that fails, build from source.
+          if ! go install sigs.k8s.io/kubebuilder/v4/cmd/kubebuilder@master; then
+            git clone --depth 1 --branch master https://github.com/kubernetes-sigs/kubebuilder /tmp/kubebuilder
+            make -C /tmp/kubebuilder install
+          fi
+
+          kubebuilder version
+
+      # Step 5: Run the Kubebuilder alpha update command.
+      # More info: https://kubebuilder.io/reference/commands/alpha_update
+      - name: Run kubebuilder alpha update
+        run: |
+          # Executes the update command with specified flags.
+          # --force: Completes the merge even if conflicts occur, leaving conflict markers.
+          # --push: Automatically pushes the resulting output branch to the 'origin' remote.
+          # --restore-path: Preserves specified paths (e.g., CI workflow files) when squashing.
+          # --open-gh-issue: Creates a GitHub Issue with a link for opening a PR for review.
+          kubebuilder alpha update \
+            --force \
+            --push \
+            --restore-path .github/workflows \
+            --open-gh-issue \
+            --from-version v4.5.2
+
+      - name: Create patch of last commit # Users may want to extract other info
+        run: |
+          git show HEAD > update.patch
+
+      - name: Prepare model prompt # Room for prompt engineering
+        run: |
+          cat > prompt.txt <<'EOF'
+          Start by stating that this summary is AI generated and can contain errors.
+          You are a concise update summarizer for an automated Kubebuilder scaffold update.
+          Analyze the patch and write a GitHub Issue comment that explains what changed.
+          Scan the patch for Git conflict markers (<<<<<<<, =======, >>>>>>>). For each conflict:
+          Explain what caused the conflict.
+          How to properly resolve them.
+          Inform the user about the recommended next steps.
+          Constraints: Markdown only, no raw diff snippets.
+
+          ---- DIFF BELOW ----
+          EOF
+          cat update.patch >> prompt.txt
+
+      - name: Generate summary with GitHub Models # Room for parameters tuning
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          set -o pipefail
+          jq -Rs '
+          {
+            model: "openai/gpt-4o",
+            messages: [
+              { "role": "user", "content": . }
+            ],
+            max_tokens: 4000,
+            temperature: 0
+          }' < prompt.txt \
+          | curl -sS https://models.github.ai/inference/chat/completions \
+              -H "Content-Type: application/json" \
+              -H "Authorization: Bearer $GITHUB_TOKEN" \
+              --data @- \
+          | jq -r '.choices[0].message.content' > COMMENT.md
+
+      - name: Determine update issue number
+        id: find-issue
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          out=$(gh issue list --state open --limit 100 --json number,title,createdAt)
+          issue_number=$(echo "$out" | jq -r '
+            sort_by(.createdAt)
+            | map(select(.title|test("^\\[Action Required\\] Upgrade the Scaffold: v[0-9.]+ -> v[0-9.]+$")))
+            | last.number // empty
+          ')
+          echo "issue_number=${issue_number}" >> "$GITHUB_OUTPUT"
+
+      - name: Post comment to issue
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh issue comment "${{ steps.find-issue.outputs.issue_number }}" --body-file COMMENT.md
