--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -9,6 +9,7 @@ name: Alpha Update
 permissions:
   contents: write
   issues: write
+  models: read  # required for GitHub Models API
 
 on:
   workflow_dispatch:
@@ -63,18 +64,13 @@ jobs:
       # More info: https://kubebuilder.io/reference/commands/alpha_update
       - name: Run kubebuilder alpha update
         run: |
-          # Executes the update command with specified flags.
-          # --force: Completes the merge even if conflicts occur, leaving conflict markers.
-          # --push: Automatically pushes the resulting output branch to the 'origin' remote.
-          # --restore-path: Preserves specified paths (e.g., CI workflow files) when squashing.
-          # --open-gh-issue: Creates a GitHub Issue with a link for opening a PR for review.
           kubebuilder alpha update \
             --force \
             --push \
             --restore-path .github/workflows \
             --open-gh-issue \
             --from-version v4.5.2 \
-            --output-branch test-ai-update
+            --output-branch test-ai-update-2
 
       - name: Create patch of last commit # Users may want to extract other info
         run: |
@@ -96,25 +92,60 @@ jobs:
           EOF
           cat update.patch >> prompt.txt
 
-      - name: Generate summary with GitHub Models # Room for parameters tuning
+      # NEW: Pick the latest available OpenAI chat model from the GitHub Models catalog
+      - name: Select latest OpenAI chat model
+        id: model
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          set -o pipefail
-          jq -Rs '
-          {
-            model: "openai/gpt-4o",
-            messages: [
-              { "role": "user", "content": . }
-            ],
-            max_tokens: 4000,
-            temperature: 0
-          }' < prompt.txt \
-          | curl -sS https://models.github.ai/inference/chat/completions \
-              -H "Content-Type: application/json" \
-              -H "Authorization: Bearer $GITHUB_TOKEN" \
-              --data @- \
-          | jq -r '.choices[0].message.content' > COMMENT.md
+          set -euo pipefail
+          catalog=$(curl -sS -L \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://models.github.ai/catalog/models)
+
+          # Prefer newest OpenAI GPT-* chat model by version; fallback to gpt-4.1
+          model_id=$(echo "$catalog" | jq -r '
+            map(select(.publisher=="OpenAI" and (.id|test("^openai/gpt")) and (.supported_output_modalities|index("text")))) 
+            | sort_by(.version) 
+            | last 
+            | .id // empty
+          ')
+          if [ -z "$model_id" ]; then model_id="openai/gpt-4.1"; fi
+          echo "id=$model_id" >> "$GITHUB_OUTPUT"
+
+      - name: Generate summary with GitHub Models # Using latest model + versioned API
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          set -euo pipefail
+
+          body=$(jq -Rs --arg model "${{ steps.model.outputs.id }}" '
+            {
+              model: $model,
+              messages: [ { "role": "user", "content": . } ],
+              max_tokens: 4000,
+              temperature: 0
+            }' < prompt.txt)
+
+          # Call Models API with recommended headers & fail on HTTP errors
+          curl -sS -L --fail-with-body \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            -H "Content-Type: application/json" \
+            https://models.github.ai/inference/chat/completions \
+            -d "$body" \
+            | tee response.json >/dev/null
+
+          # Extract text; stop the job if empty to avoid posting a blank comment
+          jq -e -r '.choices[0].message.content // empty' response.json > COMMENT.md
+          if [ ! -s COMMENT.md ]; then
+            echo "Models API returned no content. Full response:" >&2
+            cat response.json >&2
+            exit 1
+          fi
 
       - name: Determine update issue number
         id: find-issue
@@ -130,6 +161,7 @@ jobs:
           echo "issue_number=${issue_number}" >> "$GITHUB_OUTPUT"
 
       - name: Post comment to issue
+        if: ${{ steps.find-issue.outputs.issue_number != '' }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
