--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           git show --no-color --no-ext-diff --unified=0 HEAD > update.patch
 
-      # Rolling (incremental) summarization to avoid 413s
+      # Rolling (incremental) summarization to avoid 413s and YAML heredoc pitfalls
       - name: Generate summary with GitHub Models (rolling, 413-safe)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -76,24 +76,28 @@ jobs:
           # Split the patch into small chunks; lower to 30000 if you still hit 413
           CHUNK_BYTES=${CHUNK_BYTES:-60000}
           rm -f chunk_* response*.json COMMENT.md || true
-          split -b "$CHUNK_BYTES" -d -a 3 update.patch chunk_
+          split -b "$CHUNK_BYTES" -d -a 3 update.patch chunk_ || true
 
+          # Start with disclaimer
           summary="**AI-generated summary (may contain errors).**"
+
+          # If there are no chunks (tiny patch), create one empty chunk file
+          if ! ls chunk_* >/dev/null 2>&1; then
+            cp update.patch chunk_000
+          fi
 
           i=0
           for f in chunk_*; do
-            prompt=$(cat <<'EOF'
-You are a concise update summarizer for an automated Kubebuilder scaffold update.
-Task: Update the running summary below based on the NEW diff chunk.
-Requirements:
-- Keep it tight (<= 300 words).
-- Use Markdown only (no raw diff snippets).
-- If you see conflict markers (<<<<<<<, =======, >>>>>>>), add a **Conflicts** section:
-  - Cause, how to resolve, recommended next steps.
-EOF
-)
-            msg=$(printf "%s\n\nCurrent summary:\n<<<\n%s\n>>>\n\nNew diff chunk:\n<<<\n%s\n>>>\n" \
-                  "$prompt" "$summary" "$(cat "$f")")
+            prompt=$'You are a concise update summarizer for an automated Kubebuilder scaffold update.\n\
+Task: Update the running summary below based on the NEW diff chunk.\n\
+Requirements:\n\
+- Keep it tight (<= 300 words).\n\
+- Use Markdown only (no raw diff snippets).\n\
+- If you see conflict markers (<<<<<<<, =======, >>>>>>>), add a **Conflicts** section:\n\
+  - Cause, how to resolve, recommended next steps.'
+
+            # Build message without heredocs
+            msg=$"$prompt\n\nCurrent summary:\n<<<\n$summary\n>>>\n\nNew diff chunk:\n<<<\n$(cat "$f")\n>>>\n"
 
             body=$(jq -n --arg model "$MODEL" --arg content "$msg" \
               '{ model: $model,
@@ -115,7 +119,6 @@ EOF
 
           printf "%s\n" "$summary" > COMMENT.md
           test -s COMMENT.md
-          cat COMMENT.md
 
       - name: Determine update issue number
         id: find-issue
